--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,11 +1,5 @@
 FROM tensorflow/tensorflow:latest-gpu
 
-RUN apt update \
-    && apt install -y --no-install-recommends \
-    git \
-    && pip install --no-cache-dir\
+RUN pip install -U pip \
+    &&pip install --no-cache-dir\
     keras \
-    && apt-get autoremove -y \
-    && apt-get clean -y \
-    && rm -rf /var/lib/apt/lists/*
-
